fixed spacing

--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -61,7 +61,7 @@ body {
 .logo {
     width: 130px;
     position: absolute;
-    margin-top: -7px;
+    margin-top: -4px;
 }
 
 nav {
@@ -122,7 +122,7 @@ label {
     text-transform: uppercase;
     position: relative;
     border-left: 1px solid #999181;
-    height: 45px;
+    height: 39px;
 }
 
 .phone {
